objects/CustomerDet__c.object
<CustomObject>
    <fields>
        <fullName>COMPANYName__c</fullName>
        <label>COMPANY</label>
        <referenceTo>COMPANY__c</referenceTo>
        <relationshipLabel>CustomerDets (COMPANY)</relationshipLabel>
        <relationshipName>CustomerDets1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COMPANY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COMPANY</label>
        <referenceTo>COMPANY__c</referenceTo>
        <relationshipLabel>CustomerDets</relationshipLabel>
        <relationshipName>CustomerDets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CustomerDet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Det Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerDets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>